--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@part-development-org/com.theproxor.abtest",
-  "version": "1.0.0",
+  "name": "com.theproxor.abtest",
+  "version": "1.0.3",
   "description": "AbTest plugin for unity games",
   "main": "index.js",
   "scripts": {
